k8s/hello-gin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app.cpaas.io/name: hello-gin.demo-dev
    app.cpaas.io/uuid: f627cf61-b140-4b82-a9ea-dd6a82989f5c
  name: hello-gin-hello-gin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      project.cpaas.io/name: demo
      service.cpaas.io/name: deployment-hello-gin-hello-gin
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cpaas.io/creator: admin@cpaas.io
      labels:
        app.cpaas.io/name: hello-gin.demo-dev
        project.cpaas.io/name: demo
        service.cpaas.io/name: deployment-hello-gin-hello-gin
    spec:
      affinity: {}
      containers:
        - image: 35.92.92.57:32751/demo/hello-gin:latest
          imagePullPolicy: Always
          name: hello-gin
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: harbor-uh3ujg.kauto.docfj
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.cpaas.io/name: hello-gin.demo-dev
    app.cpaas.io/uuid: f627cf61-b140-4b82-a9ea-dd6a82989f5c
  name: hello-gin-hello-gin
spec:
  rules:
    - host: hello.local
      http:
        paths:
          - backend:
              service:
                name: hello-gin-hello-gin
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    ovn.kubernetes.io/vpc: ovn-cluster
  labels:
    app.cpaas.io/name: hello-gin.demo-dev
    app.cpaas.io/uuid: f627cf61-b140-4b82-a9ea-dd6a82989f5c
  name: hello-gin-hello-gin
spec:
  internalTrafficPolicy: Cluster
  ports:
    - appProtocol: tcp
      name: tcp-80-3000
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    service.cpaas.io/name: deployment-hello-gin-hello-gin
  sessionAffinity: None
  type: ClusterIP
